--- a/pages/admin/audit/index.wxml
+++ b/pages/admin/audit/index.wxml
@@ -11,9 +11,15 @@
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">新建社圈审核(</text>
-        <text class="item_text count">{{count}}</text>
-        <text class="item_text">)</text>
+        <view class="short_line"></view>
+        <view class="short_line"></view>
+        <text class="item_text reflash" bindtap="onReflash">刷新数据</text>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">新建社圈审核</text>
       </view>
       <view class="item_list">
         <scroll-view scroll-y="true">
@@ -30,9 +36,7 @@
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">商家入驻审核(</text>
-        <text class="item_text count">{{count}}</text>
-        <text class="item_text">)</text>
+        <text class="item_text">商家入驻审核</text>
       </view>
       <view class="item_list">
         <scroll-view scroll-y="true">
@@ -49,9 +53,7 @@
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">个人入驻审核(</text>
-        <text class="item_text count">{{count}}</text>
-        <text class="item_text">)</text>
+        <text class="item_text">个人入驻审核</text>
       </view>
       <view class="item_list">
         <scroll-view scroll-y="true">
@@ -68,9 +70,7 @@
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">社圈改图审核(</text>
-        <text class="item_text count">{{count}}</text>
-        <text class="item_text">)</text>
+        <text class="item_text">社圈改图审核</text>
       </view>
       <view class="item_list">
         <scroll-view scroll-y="true">
