--- a/pages/admin/audit/index.wxss
+++ b/pages/admin/audit/index.wxss
@@ -19,3 +19,4 @@
 .item_item .tag{width: 20%;height: 100%;text-align: left;}
 .item_item .name{width: 60%;height: 100%;}
 .item_item .btn{width: 20%;height: 100%;text-align: right;color: blue;}
+.reflash{color: blue;text-decoration-line: bottom;}
