--- a/pages/admin/audit/busapply/busapply.wxml
+++ b/pages/admin/audit/busapply/busapply.wxml
@@ -16,58 +16,57 @@
     </view>
     <view class="item_ctn">
       <view class="item_title">
-        <view class="short_space"></view>
-        <text class="item_text">经营信息：{{busJoinInfo.opdes}}</text>
+        <view class="short_line"></view>
+        <text class="item_text">商家类型：{{busJoinInfo.optype}}</text>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">经营信息：</text>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_space"></view>
+        <text class="item_text">{{busJoinInfo.optext}}</text>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
         <text class="item_text">地址：{{busJoinInfo.addr}}</text>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
-        <view class="short_space"></view>
-        <text class="item_text">联系：{{busJoinInfo.tel}}</text>
+        <view class="short_line"></view>
+        <text class="item_text">联系：{{busJoinInfo.contact}}</text>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
-        <view class="short_space"></view>
-        <text class="item_text">商家类型：需要在入驻页面加上</text>
-      </view>
-    </view>
-    <view class="item_ctn">
-      <view class="item_title">
-        <view class="short_space"></view>
+        <view class="short_line"></view>
         <text class="item_text">商家位置：</text>
-        <image src="../../../../static/icons/map_r.png" mode="aspectFit" bindtap="showOnMap" data-latitude="{{busJoinInfo.position.latitude}}" data-longitude="{{busJoinInfo.position.longitude}}"></image>
+        <image src="../../../../static/icons/map_r.png" mode="aspectFit" bindtap="showOnMap" data-latitude="{{busJoinInfo.latitude}}" data-longitude="{{busJoinInfo.longitude}}"></image>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">入驻：{{busJoinInfo.joinSsq.area}}{{busJoinInfo.joinSsq.name}}社圈</text>
-        <image src="../../../../static/icons/map_r.png" mode="aspectFit" bindtap="showOnMap" data-latitude="{{busJoinInfo.joinSsq.position.latitude}}" data-longitude="{{busJoinInfo.joinSsq.position.longitude}}"></image>
+        <text class="item_text">入驻：{{joinSsqInfo.area}}{{joinSsqInfo.name}}社圈</text>
+        <image src="../../../../static/icons/map_r.png" mode="aspectFit" bindtap="showOnMap" data-latitude="{{joinSsqInfo.latitude}}" data-longitude="{{joinSsqInfo.longitude}}"></image>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">商家营业执照:</text>
+        <text class="item_text">资料证照:</text>
       </view>
       <view class="item_img">
-        <image src="{{busJoinInfo.opImage}}" mode="aspectFit"></image>
-      </view>
-    </view>
-    <view class="item_ctn">
-      <view class="item_title">
-        <view class="short_line"></view>
-        <text class="item_text">商家形象图:</text>
-      </view>
-      <view class="item_img">
-        <image src="{{busJoinInfo.photo}}" mode="aspectFit"></image>
+        <view class="short_space"></view>
+        <image src="{{busJoinInfo.img}}" mode="aspectFit" bindtap="previewImage" data-src="{{busJoinInfo.img}}"></image>
+        <image src="{{busJoinInfo.cimg}}" mode="aspectFit" bindtap="previewImage" data-src="{{busJoinInfo.cimg}}"></image>
       </view>
     </view>
     <view class="item_ctn">
@@ -76,14 +75,14 @@
         <text class="item_text">审核意见：</text>
       </view>
       <view class="item_msg">
-        <textarea></textarea>
+        <textarea bindinput="onDes"></textarea>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <button type="warn">驳回</button>
-        <button type="primary">通过</button>
+        <button type="warn" bindtap="onDell" data-type="2">驳回</button>
+        <button type="primary" bindtap="onDell" data-type="1">通过</button>
       </view>
     </view>
 
