--- a/pages/admin/audit/perapply/perapply.wxml
+++ b/pages/admin/audit/perapply/perapply.wxml
@@ -11,41 +11,49 @@
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">名字：{{perJoinInfo.user.nickName}}</text>
+        <text class="item_text">名字：{{perJoinInfo.name}}</text>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">经营信息：</text>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_space"></view>
-        <text class="item_text">经营信息：{{perJoinInfo.opdes}}</text>
+        <text class="item_text">{{perJoinInfo.optext}}</text>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
-        <view class="short_space"></view>
+        <view class="short_line"></view>
         <text class="item_text">地址：{{perJoinInfo.addr}}</text>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
-        <view class="short_space"></view>
-        <text class="item_text">联系：{{perJoinInfo.tel}}</text>
+        <view class="short_line"></view>
+        <text class="item_text">联系：{{perJoinInfo.contact}}</text>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">入驻：{{perJoinInfo.joinSsq.area}}{{perJoinInfo.joinSsq.name}}社圈</text>
-        <image src="../../../../static/icons/map_r.png" mode="aspectFit" bindtap="showOnMap" data-latitude="{{perJoinInfo.joinSsq.position.latitude}}" data-longitude="{{perJoinInfo.joinSsq.position.longitude}}"></image>
+        <text class="item_text">入驻：{{joinSsqInfo.area}}{{joinSsqInfo.name}}社圈</text>
+        <image src="../../../../static/icons/map_r.png" mode="aspectFit" bindtap="showOnMap" data-latitude="{{joinSsqInfo.latitude}}" data-longitude="{{joinSsqInfo.longitude}}"></image>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <text class="item_text">手持身份证照:</text>
+        <text class="item_text">资料证照:</text>
       </view>
       <view class="item_img">
-        <image src="{{perJoinInfo.opImage}}" mode="aspectFit"></image>
+        <view class="short_space"></view>
+        <image src="{{perJoinInfo.img}}" mode="aspectFit" bindtap="previewImage" data-src="{{perJoinInfo.img}}"></image>
+        <image src="{{perJoinInfo.cimg}}" mode="aspectFit" bindtap="previewImage" data-src="{{perJoinInfo.cimg}}"></image>
       </view>
     </view>
     <view class="item_ctn">
@@ -54,14 +62,14 @@
         <text class="item_text">审核意见：</text>
       </view>
       <view class="item_msg">
-        <textarea></textarea>
+        <textarea bindinput="onDes"></textarea>
       </view>
     </view>
     <view class="item_ctn">
       <view class="item_title">
         <view class="short_line"></view>
-        <button type="warn">驳回</button>
-        <button type="primary">通过</button>
+        <button type="warn" bindtap="onDell" data-type="2">驳回</button>
+        <button type="primary" bindtap="onDell" data-type="1">通过</button>
       </view>
     </view>
 
