--- a/pages/admin/ssq/index.wxml
+++ b/pages/admin/ssq/index.wxml
@@ -128,7 +128,7 @@
 
   </view>
 
-  <button type="primary">确认提交</button>
+  <button type="primary" bindtap="dellSsq">确认提交</button>
 
   <van-popup show="{{popShow}}" position="bottom" overlay="{{ true }}" bind:close="onClose">
     <view hidden="{{type1}}">
