--- a/pages/district/detail/detail.wxml
+++ b/pages/district/detail/detail.wxml
@@ -13,8 +13,10 @@
       <text>商家数量：{{shopCount}}</text>
       <text>个人商家数量：{{personCount}}</text>
       <text>创建者：{{ssqInfo.ownername}}</text>
-      <text class="p_changebtn">申请换图</text>
-      <text class="p_joinbtn" bindtap="goJoin">马上加入</text>
+      <!-- <text class="p_changebtn">申请换图</text> -->
+      <view hidden="{{hideJoinBtn}}">
+        <text class="p_joinbtn" bindtap="goJoin">马上加入</text>
+      </view>
     </view>
   </view>
   <view class="contents_info">
