--- a/pages/district/join/person/person.wxss
+++ b/pages/district/join/person/person.wxss
@@ -68,3 +68,12 @@
 .info_space{width: 100%;height: 30rpx;}
 .line_space{width: 100%;height: 2rpx;background-color: silver;margin-top: 15rpx;margin-bottom: 15rpx;}
 .tips{font-size: 28rpx;color: silver;padding-left: 40rpx;padding-right: 40rpx;}
+
+checkbox-group{font-size: 32rpx;margin-top: 30rpx;margin-bottom: 10rpx;}
+.agreeText{text-decoration-line: underline;}
+.agree_ctn{width: 600rpx;height: auto;display: flex;flex-direction: column;font-size: 26rpx;margin-top:20rpx;margin-bottom: 20rpx;}
+.agree_title_ctn{width: 100%;height: auto;display: flex;flex-direction: column;align-items: center;}
+.agree_title{font-size: 32rpx;}
+.scroll-view{width: 100%;height:800rpx;display: flex;flex-direction: column;}
+.agree_text{width: 92%;margin-left:4%;height: auto;}
+
