--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,20 +1,34 @@
 /* pages/my/my.wxss */
+
+.user_info{width: 100%;height: auto;display: flex;flex-direction: column;background-color: #ff9800;color:white;}
+.info_time{width: 100%;height: auto;display: flex;flex-direction: row;}
+.time_text{width:240rpx;margin-left: calc(100% - 260rpx); height:auto;font-size: 26rpx;}
+.info_main{width: 100%;height: auto;display: flex;flex-direction: row;align-items: center;}
+.main_avatar{width: 68rpx;height: 68rpx;border-radius: 50%;margin:0rpx 10rpx;border:1rpx solid snow;}
+.main_nickname{font-size: 42rpx;}
+
+.b_b{width: 100%;height: 30rpx;background-color: #ff9800;padding-top: 10rpx;}
+.b_n{width: calc(100% - 4rpx);margin-left:2rpx;height: 20rpx;border-top-left-radius: 20rpx;border-top-right-radius: 20rpx;background-color: white;margin-top: 10rpx;}
+.b_d{width: 100%;height: 40rpx;background-color: #ff9800;padding-bottom: 10rpx;}
+.b_u{width: calc(100% - 4rpx);margin-left:2rpx;height: 20rpx;border-bottom-left-radius: 20rpx;border-bottom-right-radius: 20rpx;background-color: white;margin-bottom: 10rpx;}
+
 .container{
   width: 96%;height: auto;margin-left: 2%;overflow: hidden;
 }
-.shop_name{width: 100%;height: 80rpx;display: flex;flex-direction: row;align-items: center; margin-top: 15rpx;}
+
+.shop_name{width: 100%;height: 110rpx;display: flex;flex-direction: row;align-items: center; margin-top: 15rpx;}
 .name_km{height: 100%;width: 100rpx;font-size: 20rpx;display: flex;flex-direction: column;align-items: center;}
-.name_km image{width: 60rpx;height: 60rpx;}
-.name_img{width: 80rpx;height: 80rpx;}
-.name_img image{width: 100%;height: 100%;border-radius: 50%;}
+.name_km image{width: 40rpx;height: 40rpx;margin-top: 30rpx;}
+.name_img{width: 100rpx;height: 100rpx;}
+.name_img image{width: 100%;height: 100%;border-radius: 10rpx;}
 .name_name{height: auto;width: calc(100% - 180rpx);margin-left: 10rpx;display: flex;flex-direction: column;}
 .name_value{font-size: 32rpx;}
 .name_ssq{font-size: 20rpx;}
 .space_line{width: 100%;height: 2rpx;background-color: gainsboro;margin-top: 5rpx;margin-bottom: 5rpx;}
 
-.shop_detail{width: 100%;height: auto;display: flex;flex-direction: row;}
-.detail_left{width: calc(100% - 200rpx);}
-.detail_right{width: 200rpx;height: 200rpx;}
+.shop_detail{width: 100%;height: auto;display: flex;flex-direction: row;margin: 15rpx 0rpx;}
+.detail_left{width: calc(100% - 2rpx);}
+.detail_right{width: 2rpx;height: 200rpx;}
 .detail_right image{width: 100%;height: 100%;}
 .shop_sum{width: 100%;height: auto;display: flex;flex-direction: column;font-size: 24rpx;}
 .sum_item{width: 100%;height: auto;display: flex;flex-direction: row;}
@@ -26,15 +40,16 @@
 .null_info{width: calc(100% - 20rpx);height: 280rpx;font-size: 32rpx;display: flex;flex-direction: column;margin: 20rpx;}
 
 
-.ad_info{width: 100%;height: 55rpx;font-size: 28rpx;
-display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: gainsboro;}
-.ad_count{width: calc(100% - 120rpx);}
-.ad_btn{width:120rpx;text-align: right;color:blue;}
+.ad_info{width: 100%;height: 55rpx;font-size: 28rpx;display: flex;flex-direction: row;}
+.ad_count{width: calc(100% - 50rpx);}
+.ad_btn{width:50rpx;text-align: right;color:blue;}
 
 .products{width: 100%;height: auto;}
-.pro_info{width:100%;height: auto;display: flex;flex-direction: column;}
+.pro_info{width:100%;height: auto;display: flex;flex-direction: row;}
+.pro_info_left{width: calc(100% - 200rpx);height: auto;display: flex;flex-direction: column;}
 .pro_title{font-size: 28rpx;}
 .pro_des{font-size: 20rpx;margin-left: 30rpx;}
+.pro_info_right{width: 200rpx;height: auto;display: flex;flex-direction: column;}
 .pro_list{width: 100%;height: auto;}
 .plus{font-size: 32rpx;margin-top: 5rpx;}
 .plus_txt{font-size: 24rpx;color: rgb(116, 116, 116);}
@@ -54,8 +69,8 @@ display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: 
 .p_tag{width: 120rpx;height: auto;}
 .p_value{width:calc(100% - 120rpx);height: auto;}
 .p_item image{width: 100rpx; height: 140rpx;}
-.share_btn{height: 70rpx;display: flex;flex-direction: row;align-items: center;color: rgb(128, 127, 127);font-size: 26rpx;margin-right: 1rpx;margin-top: 70rpx;}
-.share_btn image{width:50rpx; height: 50rpx;margin-right: 15rpx;}
+.share_btn{width:150rpx; height: 50rpx;display: flex;flex-direction: row;align-items: center;color: rgb(128, 127, 127);font-size: 20rpx;margin-right: 1rpx;}
+.share_btn image{width:30rpx; height: 30rpx;margin-right: 15rpx;}
 
 .ctn_stars{height: auto;width: calc(100% - 120rpx);display: flex;flex-direction: row;}
 .shop_star{width: 25rpx!important;height: 25rpx!important;margin: 5rpx;}
